# fractal_package_exp

./: README.md  pyproject.toml
top_level_folder/deformation/: __init__.py  deform2fit.py
top_level_folder/mesh_slicer/: slicerr_01.py
top_level_folder/mesh_slicer/input_mesh/: example.csv
top_level_folder/mesh_slicer/output_slices/: Output.txt
top_level_folder/shape/: shapes_1.py
