[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "fractal_package_exp"
version = "2026.0.0"
dependecies = []
authors = [
          { name = 'crom', email = 'cromlyngames@gmail.com'},
          ]
maintainers = []
description = "a test run experimepnt"
readme = "README.md"
license = "GPL-3.0-or-later"

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Private :: Do Not Upload"
  
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
[project.urls]
Repository = "https://github.com/cromlyngames/fractal_package_exp.git"

